--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <canvas id="canvas" height="640" width="480"></canvas>
 
-    <script src=""></script>
+    <script src="./scritpts/game.js"></script>
 </body>
 
 
