--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <canvas id="canvas" height="640" width="480"></canvas>
 
+    <script src="https://code.createjs.com/1.0.0/easeljs.min.js"></script>
     <script src="./scritpts/game.js"></script>
 </body>
 
